Alterações no nomes das paginas

--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Mira",
-  "name": "Mira",
+  "short_name": "JD System",
+  "name": "JD System",
   "icons": [
     {
       "src": "favicon.ico",
