--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mira",
+  "name": "Catálogo",
   "version": "4.2.0",
-  "description": "Mira Pro - React Material Admin Dashboard Template",
-  "author": "Bootlab <support@bootlab.io>",
+  "description": "Catalogo - JD System",
+  "author": "JD System <desenvolvedor@jdsystem.com.br>",
   "private": true,
   "license": "https://mui.com/store/license/",
   "scripts": {
