--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "react-i18next": "11.18.5",
     "react-jvectormap": "0.0.16",
     "react-perfect-scrollbar": "1.5.8",
+    "react-query": "^3.39.2",
     "react-quill": "2.0.0",
     "react-redux": "8.0.2",
     "react-router-dom": "6.3.0",
