--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "jss": "10.9.2",
     "jwt-decode": "3.1.2",
     "next": "12.3.0",
+    "next-auth": "^4.18.6",
     "polished": "4.2.2",
     "react": "18.2.0",
     "react-apexcharts": "1.4.0",
@@ -71,6 +72,7 @@
     "react-quill": "2.0.0",
     "react-redux": "8.0.2",
     "react-router-dom": "6.3.0",
+    "react-scripts": "^5.0.1",
     "react-syntax-highlighter": "15.5.0",
     "redux": "4.2.0",
     "redux-thunk": "2.4.1",
