--- a/package.json
+++ b/package.json
@@ -44,7 +44,7 @@
     "axios-mock-adapter": "1.21.2",
     "chart.js": "3.9.1",
     "css-vendor": "2.0.8",
-    "date-fns": "2.29.2",
+    "date-fns": "^2.29.2",
     "deepmerge": "4.2.2",
     "faker": "5.5.3",
     "firebase": "8.10.1",
