--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "Catálogo",
+  "name": "Catalogo",
   "version": "4.2.0",
   "description": "Catalogo - JD System",
   "author": "JD System <desenvolvedor@jdsystem.com.br>",
